--- a/football_tournament/templates/tournament/create_or_update_team.html
+++ b/football_tournament/templates/tournament/create_or_update_team.html
@@ -1,15 +1,16 @@
 {% extends 'tournament/base.html' %}
 
-{% block content %}
+{% load i18n %}
 {% load static %}
 
+{% block content %}
 <link rel="stylesheet" href="{% static 'styles/create_or_update_team.css' %}">
 <div class="container" style="margin-top: 50px;"> <!-- Increased top margin for overall container -->
     <h2 style="margin-bottom: 50px;">{% if team %}Aggiorna Squadra{% else %}Crea Nuova Squadra{% endif %}</h2>
     <form method="post" action="{% if team %}{% url 'create_or_update_team' team.pk %}{% else %}{% url 'create_team' %}{% endif %}">
         {% csrf_token %}
         <div>
-            <label for="id_name">Team Name:</label>
+            <label for="id_name">{% trans "Team Name" %}:</label>
             <input type="text" id="id_name" name="name" value="{{ team_form.name.value|default_if_none:'' }}" required>
         </div>
 
@@ -19,11 +20,11 @@
         {{ form.id }}
         <div class="player" style="margin-bottom: 20px; margin-top: 20px;"> <!-- Increased space between players -->
             <div class="player-field">
-                <label for="{{ form.name.id_for_label }}">Name:</label>
+                <label for="{{ form.name.id_for_label }}">{% trans "Name" %}:</label>
                 {{ form.name }}
             </div>
             <div class="player-field">
-                <label for="{{ form.surname.id_for_label }}">Surname:</label>
+                <label for="{{ form.surname.id_for_label }}">{% trans "Surname" %}:</label>
                 {{ form.surname }}
             </div>
         </div>
