--- a/football_tournament/templates/tournament/match_detail.html
+++ b/football_tournament/templates/tournament/match_detail.html
@@ -7,39 +7,31 @@
 {% endblock %}
 
 {% block content %}
-
-<h2>Dettagli Partita</h2>
-<div class="match-details">
-    <div class="team-info-container">
-        <!-- Team 1 Info -->
-        <div class="team-info">
-            <div class="team-header">
-                <h3>{{ match.home_team.name }}</h3>
-            </div>
-            <div class="score">{{ match.score_home_team }}</div>
-            {% for goal in home_goals %}
-            <div class="goal-scorer">
-                {{ goal.player.name }} <span>{{ goal.total_goals | make_balls }}</span>
-            </div>
+<h3>Risultato e Marcatori</h3>
+<div class="match-container">
+    <div class="team-name-home">
+        {{ match.home_team.name }}
+        <div class="goal-scorer-home">
+            {% for scorer in home_goals %}
+                <div class="goal-scorer">
+                    {{ scorer.player.surname }} {{1 | make_balls}} ({{scorer.total_goals}})
+                </div>
             {% endfor %}
         </div>
-        
-        <!-- Versus Dash -->
-        <div class="versus">vs</div>
-        
-        <!-- Team 2 Info -->
-        <div class="team-info">
-            <div class="team-header">
-                <h3>{{ match.away_team.name }}</h3>
-            </div>
-            <div class="score">{{ match.score_away_team }}</div>
-            {% for goal in away_goals %}
+    </div>
+
+    <div class="score">{{ match.score_home_team }} - {{ match.score_away_team }}</div>
+    
+    <div class="team-name-away">
+        {{ match.away_team.name }}
+        <div class="goal-scorer-away">
+            {% for scorer in away_goals %}
             <div class="goal-scorer">
-                {{ goal.player.name }} <span>{{ goal.total_goals | make_balls }}</span>
+                {{ scorer.player.surname }} {{1 | make_balls}}({{scorer.total_goals}})
             </div>
             {% endfor %}
         </div>
     </div>
 </div>
-
 {% endblock %}
+
