--- a/football_tournament/templates/tournament/team_and_player_list.html
+++ b/football_tournament/templates/tournament/team_and_player_list.html
@@ -1,32 +1,24 @@
 {% extends 'tournament/base.html' %}
-{% load static%}
+{% load static %}
 
 {% block extra_css %}
 <link rel="stylesheet" href="{% static 'styles/team_and_player_list.css' %}">
 {% endblock %}
 
 {% block content %}
-<h2>Rose</h2>
-<table>
-    <thead>
-        <tr>
-            <th></th> <!-- For player number/position -->
-            {% for team in teams %}
-            <th>{{ team.name }}</th>
+<h2>Squadre</h2>
+<div class="teams-container">
+    {% for team in teams %}
+    <div class="team-card">
+        <h3>{{ team.name }}</h3>
+        <ul>
+            {% for player in team.players.all %}
+            <li>{{ player.surname }} {{ player.name }}</li>
+            {% empty %}
+            <li>No players listed.</li>
             {% endfor %}
-        </tr>
-    </thead>
-    <tbody>
-        {% for row in player_rows %}
-        <tr>
-            <td>{{ forloop.counter }}</td> <!-- Player number/position -->
-            {% for player in row %}
-            <td>{% if player %}{{ player.surname}} {{player.name }}{% else %}N/A{% endif %}</td>
-            {% endfor %}
-        </tr>
-        {% endfor %}
-    </tbody>
-</table>
-
-
+        </ul>
+    </div>
+    {% endfor %}
+</div>
 {% endblock %}
