--- a/football_tournament/tournament/static/styles/home.css
+++ b/football_tournament/tournament/static/styles/home.css
@@ -1,18 +1,20 @@
 
 .title {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 64px;
     text-align: left;
     margin-bottom: 50px;
-    color: #EBF3F8;
+    color: white;
     text-shadow: 2px 2px 5px black;
 }
 
 .text {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 24px;
     text-align: left;
     margin-bottom: 16px;
     margin-top: 20px;
+    color: #333333;
 }
 
+a {
+    color: white
+}
