Add dowloads section

--- a/football_tournament/templates/tournament/home.html
+++ b/football_tournament/templates/tournament/home.html
@@ -26,6 +26,9 @@
         26 partite
     </li>
     <li class="text" style="margin-bottom: 20px;">
+        Sorteggio Live giovedì 16 maggio
+    </li>
+    <li class="text" style="margin-bottom: 20px;">
         Serata di apertura il 4 Giugno con Concerto Live dei <a
             href="https://www.instagram.com/dementosofficial/">Dementos</a> (Cover Band dei GemBoy) + Aperitivo
     </li>
