--- a/football_tournament/templates/tournament/base.html
+++ b/football_tournament/templates/tournament/base.html
@@ -19,6 +19,7 @@
             <a href="{% url 'team_and_player_list' %}">SQUADRE</a>
             <a href="{% url 'match_schedule' %}">PARTITE</a>
             <a href="{% url 'ranking' %}">CLASSIFICHE</a>
+            <a href="{% url 'document_list' %}">DOWNLOADS</a>
             <a href="{% url 'login' %}?next={{ request.path }}">AREA RISERVATA</a>
             {% if user.is_authenticated %}
             <div class="authenticated-links">
